fix pom + new readme